Feat/category
* feat: app categoryspec requirement

* feat: implement get category tree

* feat: implement get category detail by id

* feat: update openapi specification

* fix: resolve lint
