# src/errorHandler/CategoryError.ts
@@ -1,0 +1,11 @@
+import { AppError } from "./AppError.js";
+
+export class CategoryNotFoundError extends AppError {
+    constructor(){
+        super(
+           "CATEGORY_NOT_FOUND",
+           404,
+           "category not found" 
+        );
+    }
+}
